--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,13 @@ python-decouple>=3.8
 psycopg2-binary>=2.9.9  # PostgreSQL adapter (optional, can use SQLite for development)
 
 # Machine Learning
-scikit-learn>=1.3.0
+xgboost>=2.0.0
+scikit-learn==1.6.1
 pandas>=2.0.0
 numpy>=1.24.0
 joblib>=1.3.0
+imbalanced-learn>=0.12.0
+cloudpickle>=2.2.0
 
 # API and Forms
 django-crispy-forms>=2.0
