--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,12 @@ python-decouple>=3.8
 psycopg2-binary>=2.9.9  # PostgreSQL adapter (optional, can use SQLite for development)
 
 # Machine Learning
-xgboost>=2.0.0
 scikit-learn==1.6.1
-pandas>=2.0.0
-numpy>=1.24.0
-joblib>=1.3.0
-imbalanced-learn>=0.12.0
-cloudpickle>=2.2.0
+joblib==1.5.3
+numpy==2.0.2
+pandas==2.2.2
 xgboost>=2.0.0
+imbalanced-learn>=0.11.0
 lightgbm>=4.0.0
 
 # API and Forms
